hphp/hack/test/typecheck/using/test_undefined.php
<?hh // strict

function test(C $c): void {}
